# jito-whitelist-management

./: .gitignore  Cargo.toml  Makefile  README.md  codama.json  package.json  pnpm-lock.yaml
.cargo/: audit.toml  config.toml
.github/workflows/: main.yaml
cli/: Cargo.toml  README.md
cli/src/: cli_args.rs  cli_signer.rs  lib.rs  whitelist_management.rs  whitelist_management_handler.rs
clients/rust/: Cargo.toml
config/: program.env
core/: Cargo.toml
core/src/: whitelist.rs
program/: Cargo.toml
program/idl/: jito_whitelist_management.json
program/src/: add_admin.rs  add_to_whitelist.rs  initialize_whitelist.rs  lib.rs  remove_admin.rs  remove_from_whitelist.rs  set_stake_tracking.rs
program/tests/: add_admin.rs  add_to_whitelist.rs  initialize_whitelist.rs  remove_admin.rs  remove_from_whitelist.rs  set_stake_tracking.rs
program/tests/fixtures/: mod.rs  whitelist_management_client.rs
sdk/: Cargo.toml
sdk/src/: error.rs  instruction.rs
shank-cli/: Cargo.toml  README.md
