[workspace]
members = ["cli", "clients/rust", "core", "program", "sdk", "shank-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Jito Network <team@jito.network>"]
repository = "https://github.com/jito-foundation/jito-whitelist-management"
homepage = "https://jito.network"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = { version = "0.32.1" }
anyhow = "1.0.101"
borsh = { version = "1.6.0", features = ["derive"] }
bs58 = "0.5.1"
bytemuck = "1.19.0"
clap = { version = "4.5.58", features = ["derive", "env"] }
env_logger = "0.11.9"
envfile = "0.2.1"
jito-bytemuck = { git = "https://github.com/jito-foundation/jito-bytemuck.git", tag = "v0.1.0" }
jito-whitelist-management-client = { path = "clients/rust", features = ["serde"] }
jito-whitelist-management-core = { path = "core" }
jito-whitelist-management-sdk = { path = "sdk" }
log = "0.4.29"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = "1.0.228"
serde-big-array = "0.5.1"
serde_json = "1.0.149"
serde_with = "3.16.1"
shank = "0.4.8"
shank_idl = "0.4.8"
solana-account-info = "3.0.0"
solana-address = { version = "2.1.0", features = ["curve25519"] }
solana-clock = "3.0.0"
solana-commitment-config = "3.0.0"
solana-cpi = "3.0.0"
solana-derivation-path = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-native-token = "3.0.0"
solana-program = "3.0"
solana-program-entrypoint = "3.0"
solana-program-error = "3.0"
solana-program-log = "1.1.0"
solana-program-test = { version = "3.0", features = ["agave-unstable-api"] }
solana-pubkey = "3.0.0"
solana-remote-wallet = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-rent = "3.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-api = "3.0.0"
solana-signature = "3.0"
solana-signer = "3.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-sysvar = "3.0"
solana-transaction = "3.0"
thiserror = "2.0.17"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
uriparse = "0.6.4"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
