[package]
name = "jito-whitelist-management-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "jito-whitelist-management-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow.workspace = true
borsh.workspace = true
clap.workspace = true
env_logger.workspace = true
jito-whitelist-management-client.workspace = true
log.workspace = true
serde_json.workspace = true
solana-commitment-config.workspace = true
solana-derivation-path.workspace = true
solana-keypair.workspace = true
solana-pubkey.workspace = true
solana-remote-wallet.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true
solana-signature.workspace = true
solana-signer.workspace = true
solana-transaction.workspace = true
tokio.workspace = true
uriparse.workspace = true
