[package]
name = "jito-whitelist-management-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytemuck.workspace = true
jito-bytemuck.workspace = true
jito-whitelist-management-sdk.workspace = true
shank.workspace = true
solana-account-info.workspace = true
solana-address.workspace = true
solana-program-error.workspace = true
solana-program-log.workspace = true
solana-pubkey.workspace = true
