[package]
name = "jito-whitelist-management-sdk"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
borsh.workspace = true
shank.workspace = true
solana-program-error.workspace = true
thiserror.workspace = true
