[package]
name = "jito-shank-cli"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
envfile.workspace = true
log.workspace = true
shank_idl.workspace = true
